[package]
name = "allocators"
version = "0.1.9"
authors = ["rphmeier <rphmeier@gmail.com>"]
description = "composable memory allocators and utilities for creating more."
documentation = "https://rphmeier.github.io/allocators/"
license = "MIT/Apache-2.0"
repository = "https://github.com/rphmeier/allocators"
keywords = ["allocator", "memory", "allocation"]